fix: body overflow.

--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,7 @@ body {
   background-color: $snow;
   @include center($min-height: 100vh);
   height: 100vh;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 480px) {
